[project]
name = "langchain-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=7.2.0",
    "langchain>=1.2.10",
    "langchain-core>=1.2.12",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.9",
    "openai>=2.21.0",
]
